fixes matrix legend position on small viewports

--- a/docs/theme/static/styles/_shared_layout.less
+++ b/docs/theme/static/styles/_shared_layout.less
@@ -818,10 +818,12 @@ body:not(.donejs):not(.community) {
 	}
 	@media(max-width: @screen-md-max){
 		width: 100%;
+		position: relative;
+		right: inherit;
 		&.affix-top,
 		&.affix-bottom,
 		&.affix {
-			position: static;
+			position: relative;
 			right: inherit;
 			-webkit-animation-name: none;
 			animation-name: none;
